tests/should_fail/type_pair_wrong_param_count.nv
module fn_generic_param_count_wrong

import super.std.core

struct Pair(A, B) {
    first: $A,
    second: $B,
}

// Pair needs 2 type params, we supply 1
let p: Pair(Int) = Pair { first: 1, second: "x" }
